# learnbe

./: .env  AGENTS.md  CLAUDE.md  GEMINI.md  TODO.md  package-lock.json  package.json  prisma.config.ts
.agents/: 2026-05-19-ecommerce-backend-session.md
.antigravitycli/: c2757ec5-2cfd-4605-8e05-082aa4c25cc1.json
.codegraph/: config.json
brain/frontend/: PLAN_FRONTEND.md  package-lock.json
docs/explanations/: admin.md  auth.md  cart.md  catalog.md  common.md  orders.md  prisma.md  redis.md  user.md
docs/html/: 2026-05-21-folder-lifecycle-design.md  2026-05-21-folder-lifecycle-plan.md  admin.html  admin_lifecycle.html  auth.html  cart.html  catalog.html  common.html  nestjs_architecture_overview.md  nestjs_flow_explain.html  orders.html  prisma.html  redis.html  src_explanation.html  user.html
docs/learning/: NESTJS_RESTAURANT_METAPHOR.md
learnbe/prisma/: schema.prisma
prisma/: exercise2.ts  exercise5.ts  schema.prisma  seed.ts
src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts
src/cart/: cart.controller.ts  cart.service.ts
src/catalog/: catalog.controller.ts  catalog.service.ts
src/orders/: orders.controller.ts  orders.service.ts
store/: .gitignore  package-lock.json  package.json
test/: admin.e2e-spec.ts  auth-cart.e2e-spec.ts  catalog.e2e-spec.ts  checkout-orders.e2e-spec.ts  e2e-app.ts  e2e-helpers.ts  roles-enforcement.e2e-spec.ts
tools/analyzer/: main.py  pyproject.toml
(+143 files in other folders)
